src/cli/snapshots/pixi__cli__init__tests__import_from_env_yamls-2.snap
---
source: src/cli/init.rs
expression: "(parse_dependencies(env_info.dependencies).unwrap(),\n    parse_channels(env_info.channels), env_info.name)"
---
(
    (
        [
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3], [5], [5]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "setuptools",
                    },
                ),
                version: Some(
                    Range(
                        GreaterEquals,
                        Version {
                            version: [[0], [39], [1], [0]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "wheel",
                    },
                ),
                version: Some(
                    Range(
                        LessEquals,
                        Version {
                            version: [[0], [0], [31], [1]],
                            local: [],
                        },
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: None,
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
        ],
        [
            (
                PackageName {
                    source: "package1",
                    normalized: "package1",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            1,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package2",
                    normalized: "package2",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            2,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package3",
                    normalized: "package3",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            3,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package4",
                    normalized: "package4",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThanEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            4,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package5",
                    normalized: "package5",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            5,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package6",
                    normalized: "package6",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThan,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            6,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package7",
                    normalized: "package7",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThan,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            7,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package8",
                    normalized: "package8",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: NotEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            8,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package9",
                    normalized: "package9",
                },
                PyPiRequirement {
                    version: None,
                    extras: None,
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package10",
                    normalized: "package10",
                },
                PyPiRequirement {
                    version: None,
                    extras: Some(
                        [
                            "extra",
                        ],
                    ),
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package11",
                    normalized: "package11",
                },
                PyPiRequirement {
                    version: None,
                    extras: Some(
                        [
                            "extra1",
                            "extra2",
                        ],
                    ),
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package12",
                    normalized: "package12",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            12,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: Some(
                        [
                            "extra1",
                            "extra2",
                        ],
                    ),
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package13",
                    normalized: "package13",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: GreaterThanEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            13,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: Some(
                        [
                            "extra1",
                            "extra2",
                        ],
                    ),
                    index: None,
                },
            ),
            (
                PackageName {
                    source: "package14",
                    normalized: "package14",
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: LessThanEqual,
                                    version: Version {
                                        epoch: 0,
                                        release: [
                                            14,
                                            0,
                                            0,
                                        ],
                                        pre: None,
                                        post: None,
                                        dev: None,
                                        local: None,
                                    },
                                },
                            ],
                        ),
                    ),
                    extras: Some(
                        [
                            "extra1",
                            "extra2",
                        ],
                    ),
                    index: None,
                },
            ),
        ],
        [],
    ),
    [
        "main",
        "r",
        "msys2",
        "conda-forge",
    ],
    "test_env",
)
