src/cli/snapshots/pixi__cli__init__tests__test_import_from_env_yaml.crnnft.yml.snap
---
source: src/cli/init.rs
expression: "(parse_dependencies(env_info.dependencies().clone()).unwrap(),\n    parse_channels(env_info.channels().clone()), env_info.name())"
---
(
    (
        [
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [10], [0], [1]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "python",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [3], [5], [5]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "setuptools",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [39], [1], [0]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "wheel",
                    },
                ),
                version: Some(
                    StrictRange(
                        StartsWith,
                        StrictVersion(
                            Version {
                                version: [[0], [0], [31], [1]],
                                local: [],
                            },
                        ),
                    ),
                ),
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
            MatchSpec {
                name: Some(
                    PackageName {
                        normalized: None,
                        source: "pip",
                    },
                ),
                version: None,
                build: None,
                build_number: None,
                file_name: None,
                channel: None,
                subdir: None,
                namespace: None,
                md5: None,
                sha256: None,
            },
        ],
        [
            (
                PyPiPackageName {
                    source: "tensorflow-gpu",
                    normalized: PackageName(
                        "tensorflow-gpu",
                    ),
                },
                PyPiRequirement {
                    version: Some(
                        VersionSpecifiers(
                            [
                                VersionSpecifier {
                                    operator: Equal,
                                    version: "1.15.0",
                                },
                            ],
                        ),
                    ),
                    extras: None,
                    index: None,
                },
            ),
            (
                PyPiPackageName {
                    source: "numpy",
                    normalized: PackageName(
                        "numpy",
                    ),
                },
                PyPiRequirement {
                    version: None,
                    extras: None,
                    index: None,
                },
            ),
            (
                PyPiPackageName {
                    source: "opencv-python",
                    normalized: PackageName(
                        "opencv-python",
                    ),
                },
                PyPiRequirement {
                    version: None,
                    extras: None,
                    index: None,
                },
            ),
            (
                PyPiPackageName {
                    source: "matplotlib",
                    normalized: PackageName(
                        "matplotlib",
                    ),
                },
                PyPiRequirement {
                    version: None,
                    extras: None,
                    index: None,
                },
            ),
            (
                PyPiPackageName {
                    source: "easydict",
                    normalized: PackageName(
                        "easydict",
                    ),
                },
                PyPiRequirement {
                    version: None,
                    extras: None,
                    index: None,
                },
            ),
        ],
        [],
    ),
    [
        "main",
        "r",
        "msys2",
    ],
    Some(
        "crnntf",
    ),
)
